# cg-stubs

./: .gitignore  .pre-commit-config.yaml  README.md  moon.yml  mypy.ini  nox-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  runtests.sh  stubgenlib.py  taskfile.common.yml  taskfile.yml  test_stubgenlib.py  xrun.sh
common/: moon.yml  mypy.ini  pyproject.toml
common/src/stubgenlib/: build.py  cpptypeconvert.py  moduleinspect.py  notifier.py  test_helpers.py  utils.py
common/tests/: test_stubgenlib.py  test_utils.py
houdini/: .interpreter  README.md  hou.py  hou_cleanup_config.py  hou_pyi_update.py  mypy.ini  pyproject.toml  stubgen_houdini.py  stubgen_houdini.sh  test_stubs.py
houdini/extras/: hou.py  hou_pyi_update.py
houdini/stubs/: hou.pyi
houdini/stubs/hou/: __init__.pyi
houdini/stubs/hou-stubs/: __init__.pyi
katana/: .interpreter  README.md  katanapy  mypy.ini  pyproject.toml  stubgen_katana.py  stubgen_katana.sh
katana/stubs/: AssetAPI_cmodule.pyi  ConfigurationAPI_cmodule.pyi  Main-stubs.pyi  Main.pyi  NodegraphAPI_cmodule.pyi  Nodes2DAPI_cmodule.pyi  Nodes3DAPI_cmodule.pyi  PyFCurve-stubs.pyi  PyFCurve.pyi  PyOpenColorIO.pyi  PyResolutionTableFn-stubs.pyi  PyResolutionTableFn.pyi  PyXmlIO-stubs.pyi  PyXmlIO.pyi  _FnKatanaCoreUI.pyi  drawing_cmodule.pyi
katana/stubs/AssetAPI/: __init__.pyi
katana/stubs/AssetAPI_cmodule/: __init__.pyi
katana/stubs/AssetBrowser/: Browser.pyi  BrowserColumn.pyi  BrowserSettings.pyi  FileBrowser.pyi  FileInfo.pyi  Manifest.pyi  NonexclusiveCheckboxPopup.pyi  __init__.pyi
katana/stubs/AssetBrowser-stubs/: BrowserColumn.pyi  FileBrowser.pyi  FileInfo.pyi  NonexclusiveCheckboxPopup.pyi
katana/stubs/CacheManager/: __init__.pyi
katana/stubs/Callbacks/: Callbacks.pyi  __init__.pyi
katana/stubs/Callbacks-stubs/: __init__.pyi
katana/stubs/CatalogAPI/: Catalog.pyi  CatalogItem.pyi  CatalogUtils.pyi  Client.pyi  __init__.pyi
katana/stubs/CatalogAPI-stubs/: CatalogItem.pyi
katana/stubs/ConditionalStateGrammar/: Parser.pyi  __init__.pyi
katana/stubs/ConditionalStateGrammar-stubs/: __init__.pyi
katana/stubs/ConfigurationAPI_cmodule/: __init__.pyi
katana/stubs/DrawingModule/: AutoPosition.pyi  CustomColors.pyi  NodeShapeAttrUtil.pyi  __init__.pyi
katana/stubs/DrawingModule-stubs/: __init__.pyi
katana/stubs/GeoAPI/: Lookfiles.pyi  Manifest.pyi  Transform.pyi  Util.pyi  __init__.pyi
katana/stubs/GeoAPI-stubs/: Transform.pyi  __init__.pyi
katana/stubs/Katana/: __init__.pyi
katana/stubs/KatanaResources/: Manifest.pyi  ResourceFiles.pyi  __init__.pyi
katana/stubs/LoggingAPI/: __init__.pyi
katana/stubs/LookFileBakeAPI/: Constants.pyi  Exceptions.pyi  LookFileBaker.pyi  LookFileUtil.pyi  OutputFormatAPI.pyi  Utils.pyi  __init__.pyi
katana/stubs/LookFileBakeAPI-stubs/: LookFileUtil.pyi
katana/stubs/MachineInfo/: KatanaInfo.pyi  MachineInfo.pyi  __init__.pyi
katana/stubs/Main/: __init__.pyi
katana/stubs/MediaCacheHandler/: Core.pyi  DiskUtil.pyi  ImageUtil.pyi  KatanaUtil.pyi  __init__.pyi
katana/stubs/MediaCacheHandler-stubs/: Core.pyi
katana/stubs/Naming/: SafeIdentifier.pyi  UniqueName.pyi  __init__.pyi
katana/stubs/Naming-stubs/: UniqueName.pyi
katana/stubs/NodeGraphView/: Manifest.pyi  Utility.pyi  __init__.pyi
katana/stubs/NodeGraphView-stubs/: __init__.pyi
katana/stubs/NodegraphAPI/: BypassParameterManager.pyi  CallbackTypes.pyi  ComplexConnector.pyi  DynamicParameters.pyi  ExpressionModule.pyi  Flavor.pyi  GroupStack.pyi  InteractiveRenderFilters.pyi  LiveGroup.pyi  Manifest.pyi  NodeDelegateManager.pyi  NodeExtensions.pyi  NodeGraphViewExtensions.pyi  NodeNameFromParamManager.pyi  NodeXmlIO.pyi  NodegraphChangedEvents.pyi  NodegraphGlobals.pyi  ParameterValueOption.pyi  (+10 more)
katana/stubs/NodegraphAPI-stubs/: InteractiveRenderFilters.pyi  NodeDelegateManager.pyi  NodegraphChangedEvents.pyi  RenderFilter.pyi  UserParameters.pyi  Util.pyi
mari/: README.md  maripy  pyproject.toml  stubgen_mari.py  stubgen_mari.sh  symbols.txt
mari/stubs/: mari.pyi
maya/: .env  .interpreter  pyproject.toml  stubgen_maya.ps1  stubgen_maya.py  stubgen_maya.sh  stubgen_maya.sh.bak
nuke/: README.md  nukepy  pyproject.toml  stubgen_nuke.sh
nuke/stubs/: _curvelib.pyi  _geo.pyi  _localization.pyi  _nuke.pyi  _splinewarp.pyi
ocio/: README.md  moon.yml  mypy.ini  pyproject.toml  stubgen_ocio.py  stubgen_ocio.sh
openexr/: pyproject.toml  stubgen_openexr.py  stubgen_openexr.sh
otio/: README.md  pyproject.toml  stubgen_otio.sh
pyside/: README.md  VERSION  build.sh  conftest.py  mypy.ini  mypyrun.ini  pyproject.toml  setup.cfg.old  stubgen_pyside.py  stubgen_pyside.sh  tox.ini  upload.sh
pyside/tests/: conftest.py  qlineedit.py  qmenu.py  test_general.py  test_helper.py  test_optional_key.py  test_qflag.py  test_slot.py
pyside6/: .python-version  README.md  pyproject.toml  pyside6_migrate.py  stubgen_pyside6.py
pyside6/tests/: conftest.py  qlineedit.py  qmenu.py  test_general.py  test_generic_signals.py  test_helper.py  test_qflag.py  test_slot.py
rez/: README.md  pyproject.toml  stubgen_rez.sh
substance_painter/: README.md  pyproject.toml  stubgen_substance_painter.py  stubgen_substancepainter.sh
usd/: .env  README.md  builddocs.sh  buildusd.sh  checkstubs.sh  comparedocs.sh  mypy-baseline.txt  mypy.ini  pyproject.toml  runtests.sh  stubgen_usd.py  stubgen_usd.sh  test_usd_stubs.py
usd/tests/: test_asset_info.py  test_batch_namespace_edit.py  test_bounding_box.py  test_cache_utils.py  test_caching.py  test_check.py  test_comment.py  test_debugging.py  test_destination_forwarding.py  test_edit.py  test_explicit.py  test_iter_contains.py  test_kind.py  test_material.py  test_notice.py  test_notice_send_custom.py  test_notice_send_derived.py  test_notice_send_global.py  test_orphaned_over.py  test_purpose.py  test_reference_into_prim.py  test_sdf_change_block.py  test_shot.py  test_source_forwarding.py  test_specializes.py  test_template_and_explicit.py  test_uniquify.py  test_usd_resolve_info.py  test_usd_stubs.py  test_user.py  test_value_caching.py  test_variant_set.py
(+2403 files in other folders)
