[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "stubgenlib"
version = "0.1.0"

#readme = "README.md"
authors = ["Chad Dombrova"]
description = "Utilities for improving the output of mypy's stubgen tool"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["mypy", "typing", "stubs"]

[tool.distutils.bdist_wheel]
universal = true
