[project]
name = "stubgenlib"
version = "0.3.0"

dependencies = [
    "mypy >= 1.15.0, < 1.16.0",
]

#readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "Utilities for improving the output of mypy's stubgen tool"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["mypy", "typing", "stubs"]

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"
