[project]
name = "stubgenlib"
version = "0.3.0"

dependencies = [
    "mypy >= 1.15.0, < 1.17.0",
]

#readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "Utilities for improving the output of mypy's stubgen tool"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["mypy", "typing", "stubs"]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/hou-stubs"]
