[project]
name = "types-houdini"
version = "21.0.512.3"

readme = "README.md"
authors = [{name="Chad Dombrova"}, {name="Ben Andersen"}]
description = "Unofficial python stubs for SideFX Houdini"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
    "mypy",
]

[tool.uv.sources]
stubgenlib = { path = "../common" }
# We need to pull mypy from source to avoid using compiled symbols, which prevents
#   subclassing certain symbols, such as ASTStubGenerator.  If a compiled
#   ASTStubGenerator, the monkeypatch in stubgen_houdini.py will not apply and there
#   will be no warning provided.
# NOTE: The version here must be maintained separately from the version stipulated in
#   stubgenlib, since the tag here is not compared against the version requirements.
mypy = { git = "https://github.com/python/mypy", tag="v1.16.1" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/hou-stubs"]

[tool.hatch.build]
# uv+hatch does not write anything to the installed .pth file if the contents
# of the package do no include .py files.  Adding this ensures the .pth file
# is written correctly
dev-mode-dirs = ["stubs"]


[tool.mypy]
follow_imports = "skip"
check_untyped_defs = true
files = [
    "stubgen_houdini.py",
]
