[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "types-katana"
readme = "README.md"
authors = [{name="Chad Dombrova"}, {name="Nathan Rusch"}]
description = "Unofficial python stubs for Foundry Katana"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
version = "5.0.5.0"
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
]

[tool.uv.sources]
stubgenlib = { path = "../common" }

[tool.hatch.build.targets.wheel]
# FIXME: generate this file and these packages using jinja
packages = [
    "stubs/_FnKatanaCoreUI-stubs",
    "stubs/_PyOpenColorIO-stubs",
    "stubs/AssetAPI-stubs",
    "stubs/AssetAPI_cmodule-stubs",
    "stubs/AssetBrowser-stubs",
    "stubs/CacheManager-stubs",
    "stubs/Callbacks-stubs",
    "stubs/CatalogAPI-stubs",
    "stubs/ConditionalStateGrammar-stubs",
    "stubs/ConfigurationAPI_cmodule-stubs",
    "stubs/DrawingModule-stubs",
    "stubs/GeoAPI-stubs",
    "stubs/Katana-stubs",
    "stubs/KatanaResources-stubs",
    "stubs/LoggingAPI-stubs",
    "stubs/LookFileBakeAPI-stubs",
    "stubs/MachineInfo-stubs",
    "stubs/Main-stubs",
    "stubs/MediaCacheHandler-stubs",
    "stubs/Naming-stubs",
    "stubs/NodeGraphView-stubs",
    "stubs/NodegraphAPI-stubs",
    "stubs/NodegraphAPI_cmodule-stubs",
    "stubs/Nodes2DAPI-stubs",
    "stubs/Nodes2DAPI_cmodule-stubs",
    "stubs/Nodes3DAPI-stubs",
    "stubs/Nodes3DAPI_cmodule-stubs",
    "stubs/PackageSuperToolAPI-stubs",
    "stubs/PluginAPI-stubs",
    "stubs/PluginSystemAPI-stubs",
    "stubs/PyFCurve-stubs",
    "stubs/PyFnAttribute-stubs",
    "stubs/PyFnGeolib-stubs",
    "stubs/PyFnGeolibProducers-stubs",
    "stubs/PyFnGeolibServices-stubs",
    "stubs/PyQt5-stubs",
    "stubs/PyResolutionTableFn-stubs",
    "stubs/PyUtilModule-stubs",
    "stubs/PyXmlIO-stubs",
    "stubs/QT4Browser-stubs",
    "stubs/QT4Color-stubs",
    "stubs/QT4FormWidgets-stubs",
    "stubs/QT4GLLayerStack-stubs",
    "stubs/QT4Panels-stubs",
    "stubs/QT4Widgets-stubs",
    "stubs/QTFCurve-stubs",
    "stubs/RenderingAPI-stubs",
    "stubs/RenderingAPI_cmodule-stubs",
    "stubs/RerenderEventMapper-stubs",
    "stubs/ResourceFiles-stubs",
    "stubs/UI4-stubs",
    "stubs/Utils-stubs",
    "stubs/ViewerAPI-stubs",
    "stubs/WorkQueue-stubs",
    "stubs/drawing_cmodule-stubs",
]
