[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "types-mari"
version = "5.0.5.0"

readme = "README.md"
authors = ["Chad Dombrova"]
description = "Unofficial python stubs for Foundry Mari"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

packages = [
    { include = "mari-stubs", from = "stubs" },
]

[tool.poetry.dependencies]
types=PySide2 = "^5.15.0.0"

[tool.distutils.bdist_wheel]
universal = true
