[project]
name = "types-mari"
version = "5.0.5.0"
dependencies = [
    "types-PySide >=5.15.0.0,<6.0.0.0",
]
readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "Unofficial python stubs for Foundry Mari"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
]

[tool.uv.sources]
stubgenlib = { path = "../common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["stubs/mari-stubs"]
