[project]
name = "types-nuke"
version = "13.2.8.0"

readme = "README.md"
authors = ["Chad Dombrova", "Nathan Rusch"]
description = "Unofficial python stubs for Foundry Nuke"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
]

[tool.uv.sources]
stubgenlib = { path = "../common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/nuke-stubs"]
