[project]
name = "types-opencolorio"
version = "2.4.2.0"

readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "python stubs for PyOpenColorIO"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[tool.mypy]
follow_imports = "skip"
check_untyped_defs = true
files = [
    "stubgen_ocio.py",
]
warn_unused_ignores = true
show_error_codes = true
enable_error_code = [
    "ignore-without-code"
]

[dependency-groups]
dev = [
    "mypy",
    "stubgenlib",
    "opencolorio==2.4.2",
]

[tool.uv.sources]
stubgenlib = { path = "../common" , editable=true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/PyOpenColorIO-stubs"]

[tool.hatch.build]
# uv+hatch does not write anything to the installed .pth file if the contents
# of the package do no include .py files.  Adding this ensures the .pth file
# is written correctly
dev-mode-dirs = ["stubs"]
