[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "types-PySide2"
version = "5.15.2.1.7"

readme = "README.md"
authors = ["Chad Dombrova"]
description = "The most accurate stubs for PySide2"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

packages = [
    { include = "PySide2-stubs", from = "stubs" },
    { include = "shiboken2-stubs", from = "stubs" },
]

[tool.distutils.bdist_wheel]
universal = true
