[project]
name = "types-PySide2"
version = "5.15.2.1.7"

readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "The most accurate stubs for PySide2"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
    "mypy-baseline",
    "pytest",
    # Keep in sync with version:
    "PySide2==5.15.2.1",
]

[tool.uv.sources]
stubgenlib = { path = "../common" , editable=true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["stubs/PySide2-stubs", "shiboken2-stubs"]
