[project]
name = "types-PySide2"
version = "5.15.2.1.8"

readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "The most accurate stubs for PySide2"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
    "pytest",
    "pytest-xdist[psutil]",
    # Keep in sync with version:
    "PySide2==5.15.2.1",
]

[tool.pytest.ini_options]
addopts = [
    "-n 6",
    "-v",
]

[tool.uv.sources]
stubgenlib = { path = "../common" , editable=true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/PySide2-stubs", "stubs/shiboken2-stubs"]

[tool.hatch.build]
# uv+hatch does not write anything to the installed .pth file if the contents
# of the package do no include .py files.  Adding this ensures the .pth file
# is written correctly
dev-mode-dirs = ["stubs"]

[tool.mypy]
check_untyped_defs = true
files = [
    "stubgen_pyside.py",
    "tests",
]
strict = true

[[tool.mypy.overrides]]
module = ["PySide2.*", "shiboken2.*"]
disable_error_code = ["no-untyped-def", "type-arg"]

[[tool.mypy.overrides]]
module = ["conftest"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true
