[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "types-rez"
version = "3.2.1.2"

readme = "README.md"
authors = ["Chad Dombrova"]
description = "python stubs for Rez"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

packages = [
    { include = "rez-stubs", from = "stubs" },
    { include = "rezplugins-stubs", from = "stubs" },
]

[tool.distutils.bdist_wheel]
universal = true

[tool.mypy]
follow_imports = "skip"
check_untyped_defs = true
files = [
    "stubs",
]
warn_unused_ignores = true
show_error_codes = true
enable_error_code = [
    "ignore-without-code"
]
