[project]
name = "types-rez"
version = "3.2.1.6"

readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "python stubs for Rez"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[tool.mypy]
follow_imports = "skip"
check_untyped_defs = true
files = [
    "stubs",
]
warn_unused_ignores = true
show_error_codes = true
enable_error_code = [
    "ignore-without-code"
]

[dependency-groups]
dev = [
    "mypy",
    "rez",
]

[tool.uv.sources]
stubgenlib = { path = "../common" , editable=true }
#rez = { path = "/Users/chad/dev/rez" }
rez = { git = "https://github.com/chadrik/rez", branch = "typing2" }
mypy = { git = "https://github.com/chadrik/mypy", branch = "stubgen-rez" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/rez-stubs"]
