[project]
name = "types-substance_painter"
version = "2023.8.3.0.0"

readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "Unofficial python stubs for Adobe Substance 3D Painter"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
]

[tool.uv]
# mypy must be installed from source (no mypyc) so that
# stubgenlib.moduleinspect.patch() can monkey-patch ModuleInspect
# to work in-process inside embedded Python environments.
no-binary-package = ["mypy"]

[tool.uv.sources]
stubgenlib = { path = "../common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/substance_painter-stubs", "stubs/_substance_painter-stubs"]
