[project]
name = "types-usd"
version = "24.5.2"

readme = "README.md"
authors = [{name="Chad Dombrova"}]
description = "Unofficial python stubs for Pixar's Universal Scene Description (USD)"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
repository = "https://github.com/LumaPictures/cg-stubs"
homepage = "https://github.com/LumaPictures/cg-stubs"

keywords = ["3d", "graphics", "games", "VFX", "CG", "animation"]

[dependency-groups]
dev = [
    "stubgenlib",
    "PySide6==6.5.1.1",
]

[tool.uv.sources]
stubgenlib = { path = "../common" , editable=true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stubs/pxr-stubs", "stubs/Boost-stubs"]
